temp commit after new ruff,mypy;pytest_benchmark;argparse-init

--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = []
 dev = [
     "mypy>=1.16.1",
     "pytest>=8.4.1",
+    "pytest-benchmark>=5.1.0",
     "pytest-cache>=1.0",
     "pytest-subtests>=0.14.2",
     "ruff>=0.12.2",
