--- a/python/.ruff.toml
+++ b/python/.ruff.toml
@@ -1,1 +1,48 @@
+# line-length = 88  # RUFF DEFAULT
 line-length = 78
+# target-version = "py39"  # RUFF DEFAULT
+target-version = "py310"
+
+[lint]
+
+# --- RUFF Defaults Copy ---
+# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
+# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
+# McCabe complexity (`C901`) by default.
+# select = ["E4", "E7", "E9", "F"]  # RUFF DEFAULTS
+# ignore = []  # RUFF DEFAULTS
+# === END: RUFF Defaults Copy ===
+select = [
+    "E", "W", "F", "PL",
+    # "E4", "E7", "E9",
+    "ERA", "YTT", "ASYNC", "S", "BLE", "FBT", "B", "A", "COM", "C4", "T10",
+    "EM", "EXE", "FIX", "FA", "INT", "ISC", "ICN", "LOG", "G", "INP", "PIE",
+    "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "SLOT", "TID", "TC",
+    "ARG", "PTH", "FLY", "I", "C90", "NPY", "PD", "N", "PERF", "PGH", "UP",
+    "FURB", "RUF", "TRY"
+]
+# Unused: ["AIR", "FAST", "ANN", "CPY", "DTZ", "DJ", "TD", "DOC", "D"]
+ignore = [
+    # Implicit namespace package, disabled to avoid cluttering every
+    # solution dir with an `__init__.py`.
+    "INP001"
+]
+
+[lint.isort]
+force-single-line = true
+
+[format]
+# Enable auto-formatting of code examples in docstrings. Markdown,
+# reStructuredText code/literal blocks and doctests are all supported.
+#
+# This is currently disabled by default, but it is planned for this
+# to be opt-out in the future.
+docstring-code-format = false  # RUFF DEFAULT
+
+# MEMO: RUFF DEFAULT
+# Set the line length limit used when formatting code snippets in
+# docstrings.
+#
+# This only has an effect when the `docstring-code-format` setting is
+# enabled.
+docstring-code-line-length = "dynamic"  # RUFF DEFAULT
